Adds detection for Oculus Quest

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4880,6 +4880,16 @@ Cube:
     - regex: '(K8GT)'
       model: '$1'
 
+# Oculus (https://www.oculus.com/)
+Oculus:
+  regex: 'Pacific|Quest.+OculusBrowser'
+  device: 'wearable'
+  models:
+    - regex: 'Pacific'
+      model: 'Go'
+    - regex: 'Quest'
+      model: 'Quest'
+
 # CUBOT
 CUBOT:
   regex: 'CUBOT|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?|(?:NOTE 20 PRO|RAINBOW 2|KING_KONG_3|KINGKONG 7|KINGKONG 5 Pro|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|R15_PRO|S550 Pro| CHEETAH| X19|X19 S)(?:[);/ ]|$)'
@@ -13053,14 +13063,6 @@ Obi:
       model: '$1'
     - regex: 'Obi[ _-]([^;/)]+)(?:[;/)]|$)'
       model: '$1'
-
-# Oculus (https://www.oculus.com/)
-Oculus:
-  regex: 'Pacific'
-  device: 'wearable'
-  models:
-    - regex: 'Pacific'
-      model: 'Go'
 
 # Okapia
 Okapia:
