--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -983,3 +983,21 @@
     model: Go
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Quest) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/13.4.0.3.15.268829550 SamsungBrowser/4.0 Chrome/87.0.4280.141 VR Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 13.4.0.3.15.268829550
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Quest
+  os_family: Android
+  browser_family: Chrome
