Adds detection for Oculus Quest 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4887,6 +4887,8 @@ Oculus:
   models:
     - regex: 'Pacific'
       model: 'Go'
+    - regex: 'Quest 2'
+      model: 'Quest 2'
     - regex: 'Quest'
       model: 'Quest'
 
