--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -1001,3 +1001,21 @@
     model: Quest
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Quest 2) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/13.0.0.2.16.259832224 SamsungBrowser/4.0 Chrome/87.0.4280.66 VR Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 13.0.0.2.16.259832224
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Quest 2
+  os_family: Android
+  browser_family: Chrome
