Improves detection for ANS and adds detection for ANS L51

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2502,9 +2502,13 @@ Ask:
 
 # ANS
 ANS:
-  regex: 'UL40 Build'
+  regex: 'ANS/|UL40 Build'
   device: 'smartphone'
-  model: 'UL40'
+  models:
+    - regex: 'UL40 Build'
+      model: 'UL40'
+    - regex: 'ANS/L51'
+      model: 'L51'
 
 # AOC (https://www.aoc.com/)
 AOC:
