Adds detection for Juniper Systems brand and Juniper Systems CT8

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9104,6 +9104,15 @@ Jolla:
   device: 'smartphone'
   model: ''
 
+# Juniper Systems (https://junipersys.com/)
+'Juniper Systems':
+  regex: 'Junipers/'
+  device: 'smartphone'
+  models:
+    - regex: 'Cedar#CT8'
+      device: 'tablet'
+      model: 'CT8'
+
 # Just5 (www.just5.com)
 Just5:
   regex: 'JUST5(-)?SPACER(s)?|COSMO[_ ](L707|L808)|BLASTER|FREEDOM[ _](C100|M303|X1)|Freedom'
