--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10170,3 +10170,21 @@
     model: L51
   os_family: Android
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; 5002E Build/QKQ1.200623.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/91.0.4472.101 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 91.0.4472.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Alcatel
+    model: 1B (2020)
+  os_family: Android
+  browser_family: Chrome
