Adds detection for UMIDIGI Power 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17965,7 +17965,7 @@ Ulefone:
 
 # UMIDIGI or UMI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Android 10.+ (?:A3[SX]|A7S))(?:[;/) ]|$)'
+  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S))(?:[;/) ]|$)'
   device: 'smartphone'
   models:
     - regex: '(A5|Z2)_Pro'
@@ -17992,6 +17992,8 @@ UMIDIGI:
       model: 'Super'
     - regex: 'S2 LITE'
       model: 'S2 Lite'
+    - regex: 'Power 3'
+      model: 'Power 3'
     - regex: ' (A3[SX]|A7S)(?:[;/) ]|$)'
       model: '$1'
     - regex: '(?:UMI_)?(London|Diamond(?:_X)?)'
