Adds detection for Adobe Synchronizer

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -923,3 +923,9 @@
     type: mobile app
     name: Google Tag Manager
     version: "4.00"
+-
+  user_agent: Mozilla/3.0 (compatible; Adobe Synchronizer 21.7.20095)
+  client:
+    type: mobile app
+    name: Adobe Synchronizer
+    version: 21.7.20095
