Improves detection for Nextcloud

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -929,3 +929,9 @@
     type: mobile app
     name: Adobe Synchronizer
     version: 21.7.20095
+-
+  user_agent: Mozilla/5.0 (Linux) mirall/2.5.1
+  client:
+    type: mobile app
+    name: Nextcloud
+    version: 2.5.1
