--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -895,6 +895,10 @@
   version: ''
 
 # Nextcloud (https://play.google.com/store/apps/details?id=com.nextcloud.client)
+- regex: '(?:mirall|Nextcloud-android)/(\d+[\.\d]+)'
+  name: 'Nextcloud'
+  version: '$1'
+
 - regex: 'Nextcloud-android/(\d+[\.\d]+)'
   name: 'Nextcloud'
   version: '$1'
