Adds detection for BlueStacks

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -935,3 +935,15 @@
     type: mobile app
     name: Nextcloud
     version: 2.5.1
+-
+  user_agent: BlueStacks/4.260.0.1020/87750099-46c9-43c0-8eb9-90c8687934ce gzip
+  client:
+    type: mobile app
+    name: BlueStacks
+    version: 4.260.0.1020
+-
+  user_agent: BlueStacks 5/5.0.230.1001/a86919c0-9431-426e-8862-c346ce1e4f38 gzip
+  client:
+    type: mobile app
+    name: BlueStacks
+    version: 5.0.230.1001
