--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -951,3 +951,8 @@
 - regex: 'Adobe Synchronizer (\d+[\.\d]+)'
   name: 'Adobe Synchronizer'
   version: '$1'
+
+# BlueStacks (https://www.bluestacks.com/)
+- regex: 'BlueStacks(?: 5)?/(\d+[\.\d]+)'
+  name: 'BlueStacks'
+  version: '$1'
