Adds detection for PowerShell

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -947,3 +947,9 @@
     type: mobile app
     name: BlueStacks
     version: 5.0.230.1001
+-
+  user_agent: Mozilla/5.0 (Windows NT; Windows NT 10.0; en-US) WindowsPowerShell/5.1.18362.1714
+  client:
+    type: mobile app
+    name: PowerShell
+    version: 5.1.18362.1714
