--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -899,10 +899,6 @@
   name: 'Nextcloud'
   version: '$1'
 
-- regex: 'Nextcloud-android/(\d+[\.\d]+)'
-  name: 'Nextcloud'
-  version: '$1'
-
 # GoNative (https://gonative.io/)
 - regex: 'GoNativeIOS/(\d+[\.\d]+)'
   name: 'GoNative'
@@ -955,4 +951,9 @@
 # BlueStacks (https://www.bluestacks.com/)
 - regex: 'BlueStacks(?: 5)?/(\d+[\.\d]+)'
   name: 'BlueStacks'
+  version: '$1'
+
+# PowerShell (https://www.microsoft.com/en-us/)
+- regex: 'WindowsPowerShell/(\d+[\.\d]+)'
+  name: 'PowerShell'
   version: '$1'
