--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -1019,3 +1019,21 @@
     model: Quest 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Standalone HMD) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/8.5.0.4.24.209184609 SamsungBrowser/4.0 Chrome/79.0.3945.126 Mobile VR Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 8.5.0.4.24.209184609
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Quest 2
+  os_family: Android
+  browser_family: Chrome
