Adds detection for Motorola Moto G 5G Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12193,6 +12193,8 @@ Motorola:
       model: 'Moto G Pro'
     - regex: 'moto g fast'
       model: 'Moto G Fast'
+    - regex: 'moto g 5G plus'
+      model: 'Moto G 5G Plus'
     - regex: 'moto g 5G'
       model: 'Moto G 5G'
     - regex: 'moto g\(([0-9])\) power lite'
