Adds detection for GlobalProtect

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -957,3 +957,8 @@
 - regex: 'WindowsPowerShell/(\d+[\.\d]+)'
   name: 'PowerShell'
   version: '$1'
+
+# GlobalProtect (https://www.paloaltonetworks.com/products/globalprotect)
+- regex: 'PAN GlobalProtect/(\d+[\.\d]+)'
+  name: 'GlobalProtect'
+  version: '$1'
