--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -953,3 +953,9 @@
     type: mobile app
     name: PowerShell
     version: 5.1.18362.1714
+-
+  user_agent: PAN GlobalProtect/5.2.6-87 (Microsoft Windows 10 Enterprise , 64-bit) Mozilla/5.0 (Windows NT 6.2; Win64; x64; Trident/7.0; rv:11.0) like Gecko
+  client:
+    type: mobile app
+    name: GlobalProtect
+    version: 5.2.6
