Adds detection for Theyub

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -959,3 +959,9 @@
     type: mobile app
     name: GlobalProtect
     version: 5.2.6
+-
+  user_agent: Theyub v7.4.8 IOS iPhoneXSMax CA en
+  client:
+    type: mobile app
+    name: Theyub
+    version: 7.4.8
