--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -962,3 +962,8 @@
 - regex: 'PAN GlobalProtect/(\d+[\.\d]+)'
   name: 'GlobalProtect'
   version: '$1'
+
+# Theyub
+- regex: 'Theyub v(\d+[\.\d]+)'
+  name: 'Theyub'
+  version: '$1'
