Change model name

--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9066,7 +9066,7 @@
   device:
     type: tablet
     brand: Topelotek
-    model: Kids
+    model: KIDS09 Kids Tablet
   os_family: Android
   browser_family: Chrome
 - 
