--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17756,7 +17756,7 @@ Top House:
 Topelotek:
   regex: 'KIDS09'
   device: 'tablet'
-  model: 'Kids'
+  model: 'KIDS09 Kids Tablet'
 
 # Toplux
 Toplux:
