--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -965,3 +965,75 @@
     model: Watch Series 7 45mm
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Pacific) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/10.16.0.0.0.296461555 SamsungBrowser/4.0 Chrome/91.0.4472.88 Mobile VR Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 10.16.0.0.0.296461555
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Go
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Quest) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/13.4.0.3.15.268829550 SamsungBrowser/4.0 Chrome/87.0.4280.141 VR Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 13.4.0.3.15.268829550
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Quest
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Quest 2) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/13.0.0.2.16.259832224 SamsungBrowser/4.0 Chrome/87.0.4280.66 VR Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 13.0.0.2.16.259832224
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Quest 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Standalone HMD) AppleWebKit/537.36 (KHTML, like Gecko) OculusBrowser/8.5.0.4.24.209184609 SamsungBrowser/4.0 Chrome/79.0.3945.126 Mobile VR Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Oculus Browser
+    version: 8.5.0.4.24.209184609
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: wearable
+    brand: Oculus
+    model: Quest 2
+  os_family: Android
+  browser_family: Chrome
