Improve detection for Apple iPhone XS Max

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -965,7 +965,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][2]| XS\)$'
       model: 'iPhone XS'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][46]| XSMAX\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][46]|iPhoneXSMax| XSMAX\)$'
       model: 'iPhone XS Max'
       device: 'phablet'
     - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][8]| XR\)$'
