--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10260,3 +10260,19 @@
     model: Moto G 5G Plus
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Theyub v7.4.8 IOS iPhoneXSMax CA en
+  os:
+    name: iOS
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Theyub
+    version: 7.4.8
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone XS Max
+  os_family: iOS
+  browser_family: Unknown
