Improves detection for Apple iPhone 7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -947,7 +947,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?8[C,_]4| SE\)$'
       model: 'iPhone SE'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?9[C,_][13]| 7\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?9[C,_][13]|iphone7 | 7\)$'
       model: 'iPhone 7'
       device: 'smartphone'
     - regex: '(?:Apple-|.+_)?iPh(?:one)?9[C,_][24]| 7PLUS\)$'
