Adds detection for Amazon Fire TV Stick 4K and improves detection for Fire OS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2775,3 +2775,11 @@
     version: ""
     platform: ""
     family: iOS
+-
+  user_agent: 'Gibbon/2020.2.2.0/2020.2.2.0: Netflix/2020.2.2.0 (DEVTYPE=NFANDROID2-PRV-FIRETVSTICK2018; CERTVER=0)'
+  os:
+    name: Fire OS
+    short_name: FIR
+    version: "6"
+    platform: ""
+    family: Android
