--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -120,6 +120,10 @@
   name: 'Fire OS'
   version: '$1'
 
+- regex: '.+FIRETVSTICK2018'
+  name: 'Fire OS'
+  version: '6'
+
 - regex: 'AFTSO001'
   name: 'Fire OS'
   version: '7'
