Adds detection for various apps and detect some devices(#6905)
* Adds detection for MetaTrader and improves detection for M.T.T. brand
* Adds detection for Paint by Number
* Adds detection for ZEPETO
* Adds detection for Jungle Disk
* Adds detection for Nextcloud
* Improves detection for Teams
* Adds detection for GoNative
* Adds detection for Pandora
* Adds detection for Blackboard
* Adds detection for QQMusic
* Adds detection for eToro
* Adds detection for Avid Link
* Improves detection for Blackboard
* Adds detection for Facebook Audience Network
* Adds detection for Netflix
* Adds detection for Google Tag Manager
* Adds detection for Adobe Synchronizer
* Improves detection for Nextcloud
* Adds detection for BlueStacks
* Adds detection for PowerShell
* Adds detection for GlobalProtect
* Adds detection for Theyub
* Improve detection for Apple iPhone XS Max
* Improves detection for Apple iPhone 7
* Adds detection for Amazon Fire TV Stick 4K and improves detection for Fire OS

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -827,3 +827,141 @@
     type: mobile app
     name: Bible KJV
     version: 2.83.0
+-
+  user_agent: MetaTrader 5 Terminal/5.2981 (Windows NT 10.0.19042; x64)
+  client:
+    type: mobile app
+    name: MetaTrader
+    version: "5.2981"
+-
+  user_agent: ios/14.8 com.paint.bynumber/2.72.0
+  client:
+    type: mobile app
+    name: Paint by Number
+    version: 2.72.0
+-
+  user_agent: ios.zepeto_global/3.6.2 (ios; U; iOS 14.7.1; en-CA; occ-CA; iPhone 11);ZEPETO
+  client:
+    type: mobile app
+    name: ZEPETO
+    version: 3.6.2
+-
+  user_agent: Jungle Disk Workgroup HTTP/110 (Windows 10.0 64-bit)
+  client:
+    type: mobile app
+    name: Jungle Disk
+    version: ""
+-
+  user_agent: Mozilla/5.0 (Android) Nextcloud-android/3.17.1
+  client:
+    type: mobile app
+    name: Nextcloud
+    version: 3.17.1
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 14_6 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 TeamsMobile-iOS
+  client:
+    type: mobile app
+    name: Teams
+    version: ""
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_6 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 GoNativeIOS/1.0 gonative
+  client:
+    type: mobile app
+    name: GoNative
+    version: "1.0"
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Pandora/2108.1.1
+  client:
+    type: mobile app
+    name: Pandora
+    version: 2108.1.1
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_7_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Safari/605.1 Blackboard/6.9
+  client:
+    type: mobile app
+    name: Blackboard
+    version: "6.9"
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 14_8 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Mobile/12A365 QQMusic/10.18.0 Mskin/white Mcolor/22d59cff Bcolor/00000000 skinid[902] NetType/2G WebView/UIWebView Released[1] zh-Hans-JP DeviceModel/iPhone13,4 skin_css/skin2_1_902 Pixel/1284 FreeFlow/0 teenMode/0 nft_released/[1] FontMode/0]  pixel/1284 model/iPhone13,4'
+  client:
+    type: mobile app
+    name: QQMusic
+    version: 10.18.0
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 14_7_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148  etoro-cordova-app'
+  client:
+    type: mobile app
+    name: eToro
+    version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_16_0) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.11.1 Chrome/65.0.3325.230 Safari/537.36 Avid Link Desktop App/20.4.0.1302
+  client:
+    type: mobile app
+    name: Avid Link
+    version: 20.4.0.1302
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; SM-N981U Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/95.0.4638.50 Mobile Safari/537.36 Blackboard/unspecified
+  client:
+    type: mobile app
+    name: Blackboard
+    version: ""
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 11; SM-G973F Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/95.0.4638.74 Mobile Safari/537.36 [FBAN/AudienceNetworkForAndroid;FBSN/Android;FBSV/11;FBAB/com.dopuz.klotski.riddle;FBAV/5.1701;FBBV/51701;FBVS/6.7.0;FBLC/en_GB]'
+  client:
+    type: mobile app
+    name: Facebook Audience Network
+    version: "5.1701"
+-
+  user_agent: 'Gibbon/2020.2.2.0/2020.2.2.0: Netflix/2020.2.2.0 (DEVTYPE=NFANDROID2-PRV-FIRETVSTICK2018; CERTVER=0)'
+  client:
+    type: mobile app
+    name: Netflix
+    version: 2020.2.2.0
+-
+  user_agent: GoogleTagManager/4.00 (Linux; U; Android 9; en-us; U693CL Build/U693CL_01.02.03)
+  client:
+    type: mobile app
+    name: Google Tag Manager
+    version: "4.00"
+-
+  user_agent: Mozilla/3.0 (compatible; Adobe Synchronizer 21.7.20095)
+  client:
+    type: mobile app
+    name: Adobe Synchronizer
+    version: 21.7.20095
+-
+  user_agent: Mozilla/5.0 (Linux) mirall/2.5.1
+  client:
+    type: mobile app
+    name: Nextcloud
+    version: 2.5.1
+-
+  user_agent: BlueStacks/4.260.0.1020/87750099-46c9-43c0-8eb9-90c8687934ce gzip
+  client:
+    type: mobile app
+    name: BlueStacks
+    version: 4.260.0.1020
+-
+  user_agent: BlueStacks 5/5.0.230.1001/a86919c0-9431-426e-8862-c346ce1e4f38 gzip
+  client:
+    type: mobile app
+    name: BlueStacks
+    version: 5.0.230.1001
+-
+  user_agent: Mozilla/5.0 (Windows NT; Windows NT 10.0; en-US) WindowsPowerShell/5.1.18362.1714
+  client:
+    type: mobile app
+    name: PowerShell
+    version: 5.1.18362.1714
+-
+  user_agent: PAN GlobalProtect/5.2.6-87 (Microsoft Windows 10 Enterprise , 64-bit) Mozilla/5.0 (Windows NT 6.2; Win64; x64; Trident/7.0; rv:11.0) like Gecko
+  client:
+    type: mobile app
+    name: GlobalProtect
+    version: 5.2.6
+-
+  user_agent: Theyub v7.4.8 IOS iPhoneXSMax CA en
+  client:
+    type: mobile app
+    name: Theyub
+    version: 7.4.8
