--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -19,6 +19,11 @@
   name: 'bPod'
   version: ''
 
+# Facebook Audience Network
+- regex: 'AudienceNetworkForAndroid.+(?:FBAV)(?:[ /]([\d\.]+))?'
+  name: 'Facebook Audience Network'
+  version: '$1'
+
 # Facebook Messenger Lite
 - regex: 'MessengerLiteForiOS.(?:FBAV)(?:[ /]([\d\.]+))?'
   name: 'Facebook Messenger Lite'
@@ -621,6 +626,10 @@
   name: 'Teams'
   version: '$1'
 
+- regex: 'TeamsMobile-iOS'
+  name: 'Teams'
+  version: ''
+
 # Streamlabs OBS (https://streamlabs.com/)
 - regex: 'StreamlabsOBS/(\d+[\.\d]+)'
   name: 'Streamlabs OBS'
@@ -863,4 +872,98 @@
 # Bible KJV (https://apps.apple.com/us/app/bible-kjv/id544098932)
 - regex: 'com.meevii.bibleKJV/(\d+[\.\d]+)'
   name: 'Bible KJV'
+  version: '$1'
+
+# MetaTrader (https://www.metatrader5.com/)
+- regex: 'MetaTrader 5 Terminal/(\d+[\.\d]+)'
+  name: 'MetaTrader'
+  version: '$1'
+
+# Paint by Number (https://apps.apple.com/us/app/paint-by-number-coloring-games/id1420058690)
+- regex: 'com.paint.bynumber/(\d+[\.\d]+)'
+  name: 'Paint by Number'
+  version: '$1'
+
+# ZEPETO (https://apps.apple.com/app/id1350301428)
+- regex: 'zepeto_global/(\d+[\.\d]+)'
+  name: 'ZEPETO'
+  version: '$1'
+
+# Jungle Disk (https://www.jungledisk.com/)
+- regex: 'Jungle Disk Workgroup HTTP'
+  name: 'Jungle Disk'
+  version: ''
+
+# Nextcloud (https://play.google.com/store/apps/details?id=com.nextcloud.client)
+- regex: '(?:mirall|Nextcloud-android)/(\d+[\.\d]+)'
+  name: 'Nextcloud'
+  version: '$1'
+
+# GoNative (https://gonative.io/)
+- regex: 'GoNativeIOS/(\d+[\.\d]+)'
+  name: 'GoNative'
+  version: '$1'
+
+# Pandora (https://apps.apple.com/us/app/pandora-music-podcasts/id284035177)
+- regex: 'Pandora/(\d+[\.\d]+)'
+  name: 'Pandora'
+  version: '$1'
+
+# Blackboard (https://apps.apple.com/us/app/blackboard/id950424861)
+- regex: 'Blackboard/(\d+[\.\d]+)'
+  name: 'Blackboard'
+  version: '$1'
+
+- regex: 'Blackboard/unspecified'
+  name: 'Blackboard'
+  version: ''
+
+# QQMusic (https://apps.apple.com/cn/app/qq%E9%9F%B3%E4%B9%90-%E5%90%AC%E6%88%91%E6%83%B3%E5%90%AC/id414603431)
+- regex: 'QQMusic/(\d+[\.\d]+)'
+  name: 'QQMusic'
+  version: '$1'
+
+# eToro (https://www.etoro.com/)
+- regex: 'etoro-cordova-app'
+  name: 'eToro'
+  version: ''
+
+# Avid Link (https://www.avid.com/products/avid-link)
+- regex: 'Avid Link Desktop App/(\d+[\.\d]+)'
+  name: 'Avid Link'
+  version: '$1'
+
+# Netflix (https://www.netflix.com/)
+- regex: 'Netflix/(\d+[\.\d]+)'
+  name: 'Netflix'
+  version: '$1'
+
+# Google Tag Manager (https://www.google.com/)
+- regex: 'GoogleTagManager/(\d+[\.\d]+)'
+  name: 'Google Tag Manager'
+  version: '$1'
+
+# Adobe Synchronizer (https://www.adobe.com/)
+- regex: 'Adobe Synchronizer (\d+[\.\d]+)'
+  name: 'Adobe Synchronizer'
+  version: '$1'
+
+# BlueStacks (https://www.bluestacks.com/)
+- regex: 'BlueStacks(?: 5)?/(\d+[\.\d]+)'
+  name: 'BlueStacks'
+  version: '$1'
+
+# PowerShell (https://www.microsoft.com/en-us/)
+- regex: 'WindowsPowerShell/(\d+[\.\d]+)'
+  name: 'PowerShell'
+  version: '$1'
+
+# GlobalProtect (https://www.paloaltonetworks.com/products/globalprotect)
+- regex: 'PAN GlobalProtect/(\d+[\.\d]+)'
+  name: 'GlobalProtect'
+  version: '$1'
+
+# Theyub
+- regex: 'Theyub v(\d+[\.\d]+)'
+  name: 'Theyub'
   version: '$1'
