--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -947,7 +947,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?8[C,_]4| SE\)$'
       model: 'iPhone SE'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?9[C,_][13]| 7\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?9[C,_][13]|iphone7 | 7\)$'
       model: 'iPhone 7'
       device: 'smartphone'
     - regex: '(?:Apple-|.+_)?iPh(?:one)?9[C,_][24]| 7PLUS\)$'
@@ -965,7 +965,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][2]| XS\)$'
       model: 'iPhone XS'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][46]| XSMAX\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][46]|iPhoneXSMax| XSMAX\)$'
       model: 'iPhone XS Max'
       device: 'phablet'
     - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][8]| XR\)$'
@@ -12405,13 +12405,13 @@ Myria:
 
 # M.T.T.
 M.T.T.:
-  regex: 'M.T.T.'
+  regex: 'M\.T\.T\.'
   device: 'smartphone'
   models:
-    - regex: 'M.T.T. ?Tablet([^;/]+)? Build'
+    - regex: 'M\.T\.T\. ?Tablet([^;/]+)? Build'
       device: 'tablet'
       model: 'Tablet$1'
-    - regex: 'M.T.T. ?([^;/]+) Build'
+    - regex: 'M\.T\.T\. ?([^;/]+) Build'
       model: '$1'
 
 # Navon
@@ -16996,7 +16996,7 @@ Anker:
 
 # Kindle
 Amazon:
-  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(?:BC|C[HW]|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|TRP?WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+|Echo/1'
+  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(?:BC|C[HW]|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|TRP?WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+|Echo/1|.+FIRETVSTICK'
   device: 'tablet'
   models:
     - regex: 'AFTA'
@@ -17019,6 +17019,9 @@ Amazon:
       device: 'tv'
     - regex: 'AFT[MST]'
       model: 'Fire TV stick'
+      device: 'tv'
+    - regex: '.+FIRETVSTICK2018'
+      model: 'Fire TV Stick 4K'
       device: 'tv'
     - regex: 'KFFOWI(?:[);/ ]|$)'
       model: 'Fire 7"'
