feat(device) detect new brand MyGica models: HDR Smart TV Box, HDR Quad Core Box, ATV1900, ATV495 Pro 16G, Quad Core Enjoy TV Box, ATV1960 feat(device) detect brand Blackview model: A8 Max feat(device) detect brand Blu model: Life One X2 Mini
feat(device) added tests for brand Supra: M74C 4G, M12CG

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3029,10 +3029,10 @@ Blu:
       model: 'Pure Mini'
     - regex: 'BOLD N1'
       model: 'Bold N1'
-    - regex: 'Life One X2'
-      model: 'Life One X2'
-    - regex: 'LIFE ONE X'
-      model: 'Life One X'
+    - regex: 'Life One X2 Mini'
+      model: 'Life One X2 Mini'
+    - regex: 'LIFE ONE (X2?)'
+      model: 'Life One $1'
     - regex: 'LIFE ONE'
       model: 'Life One'
     - regex: 'LIFE MARK'
@@ -3118,7 +3118,7 @@ Bluegood:
 
 # Blackview
 Blackview:
-  regex: 'Blackview|(BV([24-9]000|[46]900|(5[1589]|9[15689])00|6[1368]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))|(?:A[86]0Plus|A80S|BL6000Pro|R6 Lite|P2Lite)(?:[);/ ]|$)'
+  regex: 'Blackview|(BV([24-9]000|[46]900|(5[1589]|9[15689])00|6[1368]00)(?:[ _](?:PRO))?|(P10000(?:[ _](?:PRO))?)|omega[ _]pro|Alife[ _][PS]1|Heatwave|DM550|BV9700Pro|(?<!Lenovo[_ ])A[68]0(?:Pro)?\))|(?:A[86]0Plus|A80S|BL6000Pro|R6 Lite|P2Lite|A8 MAX)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'A60Pro\)'
@@ -3127,6 +3127,8 @@ Blackview:
       model: 'A60'
     - regex: 'A80Pro(?:[);/ ]|$)'
       model: 'A80 Pro'
+    - regex: 'A8 MAX(?:[);/ ]|$)'
+      model: 'A8 Max'
     - regex: 'A80S(?:[);/ ]|$)'
       model: 'A80S'
     - regex: '(A[86]0|BV[59]500)Plus(?:[);/ ]|$)'
@@ -25615,6 +25617,18 @@ Polar:
   regex: 'Polar[_ ](P24L51T2CSM)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
+
+# MyGica (www.mygica.com)
+MyGica:
+  regex: 'MyGica[_ ]'
+  device: 'tv'
+  models:
+    - regex: 'HDR (Quad Core|Smart TV) Box'
+      model: 'HDR $1 Box'
+    - regex: 'Quad core Enjoy tv box'
+      model: 'Quad Core Enjoy TV Box'
+    - regex: 'ATV(19[60]0|495 Pro 16G)'
+      model: 'ATV$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
