Improves detection for Opera GX

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1261,7 +1261,7 @@
   version: ''
 
 # Opera GX (https://www.opera.com/gx#start | http://ftp.opera.com/pub/opera_gx/)
-- regex: 'OPRGX(?:/(\d+[\.\d]+))?'
+- regex: 'OP(?:RG)?X(?:/(\d+[\.\d]+))?'
   name: 'Opera GX'
   version: '$1'
   engine:
