--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2783,3 +2783,11 @@
     version: "6"
     platform: ""
     family: Android
+-
+  user_agent: Jungle Disk Workgroup HTTP/110 (Windows 10.0 64-bit)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10"
+    platform: x64
+    family: Windows
