--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -430,7 +430,7 @@
   name: 'Windows'
   version: '3.1'
 
-- regex: 'Windows|Win64|MSDW|HandBrake Win Upd|Microsoft BITS'
+- regex: 'Windows|.+win32|Win64|MSDW|HandBrake Win Upd|Microsoft BITS'
   name: 'Windows'
   version: ''
 
