--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10276,3 +10276,21 @@
     model: iPhone 7
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 9; 5006G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.61 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 94.0.4606.61
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Alcatel
+    model: 3C (2019)
+  os_family: Android
+  browser_family: Chrome
