Adds detection for TCL L7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14012,7 +14012,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|6125[FD]|A50[279]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|A50[279]DL|T78[02]H|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -14029,6 +14029,10 @@ TCL:
       model: 'C5'
     - regex: '5133A(?:[);/ ]|$)'
       model: 'L5'
+    - regex: '5102B(?:[);/ ]|$)'
+      model: 'L7'
+    - regex: '5159[AJ](?:[);/ ]|$)'
+      model: 'L9'
     - regex: '4187M(?:[);/ ]|$)'
       model: 'L10 Lite'
     - regex: 'T780H(?:[);/ ]|$)'
@@ -14047,8 +14051,6 @@ TCL:
       model: 'LX'
     - regex: 'A507DL(?:[);/ ]|$)' # TracFone A507DL
       model: 'A2'
-    - regex: '5159[AJ](?:[);/ ]|$)'
-      model: 'L9'
     - regex: 'T770H(?:[);/ ]|$)'
       model: '10L'
     - regex: 'T766[AHJU](?:_(?:EEA|RU))?(?:[);/ ]|$)'
