Adds detection for Gateway Tablet 8"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5705,6 +5705,15 @@ Facebook:
   device: 'tv'
   model: 'Portal TV'
 
+# Gateway
+Gateway:
+  regex: 'GWAT8-1'
+  device: 'smartphone'
+  models:
+    - regex: 'GWAT8-1'
+      device: 'tablet'
+      model: 'Tablet 8"'
+
 # Rikomagic
 Rikomagic:
   regex: 'MK(80[28][^/;]*) Build'
