Adds detection for MicroMax IN Note 1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1146,7 +1146,7 @@ Apple:
 
 # micromax
 MicroMax:
-  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221|(?:YU(?:5040|5530)|AQ5001(?: Canvas Power)?|N8216|N8301)(?:[);/ ]|$)'
+  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221|(?:YU(?:5040|5530)|AQ5001(?: Canvas Power)?|N8216|N8301|IN_Note1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'AQ5001 Canvas Power'
@@ -1204,6 +1204,8 @@ MicroMax:
       model: 'Canvas 2 Plus'
     - regex: 'Bharat (\d)(?:[);/ ]|$)'
       model: 'Bharat $1'
+    - regex: 'IN_Note1(?:[);/ ]|$)'
+      model: 'IN Note 1'
 
     - regex: 'MicroMax(?:[ \-\_])?(X291|X246|X252|X458|X312)'
       model: '$1'
