Adds detection for KRIP brand and KRIP K4m

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25143,6 +25143,14 @@ KREZ:
       device: 'tablet'
       model: '$1 3G'
 
+# KRIP (https://www.krip.com/)
+KRIP:
+  regex: 'K4m'
+  device: 'smartphone'
+  models:
+    - regex: 'K4m(?:[);/ ]|$)'
+      model: 'K4m'
+
 # Kurio or KD Interactive (www.group-kd.com, kdplanet.com)
 Kurio:
   regex: 'Kurio'
