Adds detection for Safaricom Neon Ray 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14375,13 +14375,15 @@ S-TELL:
 
 # Safaricom
 Safaricom:
-  regex: 'NEON_RAY'
+  regex: 'NEON[_ ]RAY'
   device: 'smartphone'
   models:
     - regex: 'NEON_RAY_PRO'
       model: 'Neon Ray Pro'
     - regex: 'NEON_RAY'
       model: 'Neon Ray'
+    - regex: 'NEON RAY 2'
+      model: 'Neon Ray 2'
 
 # Santin
 Santin:
