--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10636,3 +10636,21 @@
     model: Neon Ray 2
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 11; 5087Z) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 92.0.4515.131
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: TCL
+    model: 20 XE
+  os_family: Android
+  browser_family: Chrome
