--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -461,7 +461,7 @@
     name: Windows
     short_name: WIN
     version: "NT"
-    platform:
+    platform: x64
     family: Windows
 -
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 5.2 x64; en-US; rv:1.9a1) Gecko/20061007 Minefield/3.0a1
@@ -2053,7 +2053,7 @@
     name: Windows Phone
     short_name: WPH
     version: "8.0"
-    platform: ""
+    platform: x86
     family: Windows Mobile
 -
   user_agent: MAMPPRO/6.3.1 macOS/11.0.1
