--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -2890,7 +2890,7 @@
   os:
     name: Windows
     version: "NT"
-    platform: ""
+    platform: x64
   client:
     type: browser
     name: Internet Explorer
