--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1377,7 +1377,7 @@
   os:
     name: Windows
     version: "10"
-    platform: ""
+    platform: x86
   client:
     type: mobile app
     name: Razer Synapse
