Adds detection for KRIP brand, improves detection for Alcatel, Blu, BMobile, Epik One, Gateway, Huawei, Hyundai, IKU Mobile, MobiWire, MicroMax, Positivo, Safaricom, TCL, UMIDIGI, Vivo brands and improves detection for Opera GX, Windows, x86, x64 platforms (#6907)
* Improves detection for Opera GX
* Improves detection for x64 platform
* Improves detection for Windows and x86 platform
* Improves detection for Alcatel 3C (2019)
* Improves detection for Alcatel 1SE (2020)
* Improves detection for Alcatel 3L (2020)
* Adds detection for Alcatel 3T 10.1"
* Rename Alcatel 3T 10 to 3T 10" and move fixtures to tablet file
* Sort Alcatel regex
* Adds detection for TCL L10 Lite
* Improves detection for Alcatel 1B (2020)
* Improves detection for Alcatel 1V (2020)
* Adds detection for TCL L7
* Adds detection for Alcatel Joy Tab 2
* Adds detection for TCL Tab 8" 4G
* Adds detection for UMIDIGI A7 Pro
* Adds detection for UMIDIGI A9 Pro
* Adds detection for Alcatel Volta
* Adds detection for BMobile B60 Pro
* Adds detection for Hyundai E603
* Adds detection for Blu G50 Mega
* Adds detection for Blu G50 Plus
* Adds detection for Gateway Tablet 8"
* Adds detection for IKU Mobile A40
* Adds detection for MicroMax IN Note 1
* Adds detection for KRIP brand and KRIP K4m
* Adds detection for Epik One Leo HD
* Improves detection for Huawei Nova 8i
* Adds detection for Safaricom Neon Ray 2
* Adds detection for TCL 20 XE
* Adds detection for Alcatel 1 (2021)
* Adds detection for Vivo V21e 5G
* Adds detection for Vivo Y72 5G
* Adds detection for Vivo Y20A
* Adds detection for Vivo Y51
* Adds detection for MobiWire Smart E11
* Adds detection for Blu Studio X10
* Adds detection for Positivo Twist 4 Pro
* Improve regex for Opera GX

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4013,3 +4013,30 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_6 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 OPX/1.3.1
+  client:
+    type: browser
+    name: Opera GX
+    version: 1.3.1
+    engine: WebKit
+    engine_version: 605.1.15
+    family: Opera
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 15_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 OPX/1.3.1
+  client:
+    type: browser
+    name: Opera GX
+    version: 1.3.1
+    engine: WebKit
+    engine_version: 605.1.15
+    family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Moto G (5) Plus Build/OPS28.85-17-6-2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.61 Mobile Safari/537.36 OPX/1.3
+  client:
+    type: browser
+    name: Opera GX
+    version: "1.3"
+    engine: Blink
+    engine_version: ""
+    family: Opera
