Adds detection for Dazen brand and Dazen 6A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5074,6 +5074,14 @@ Danew:
       device: 'tablet'
       model: 'Dslide $1'
 
+# Dazen
+Dazen:
+  regex: 'dazen'
+  device: 'smartphone'
+  models:
+    - regex: '6A'
+      model: '6A'
+
 # Denver Electronics (denver-electronics.com)
 Denver:
   regex: '(?:TA[CDQ]-[0-9]+)|P(?:.+)TAQ-(?:[0-9]+)|SDQ[_-](?:550[24]4L|52001G|50002G|57004L)'
