Adds detection for Paladin brand and Paladin TV Box

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23203,6 +23203,12 @@ P-UP:
       device: 'smartphone'
       model: 'Mode 1 MD-01P'
 
+# Paladin (https://paladin.com.my/)
+Paladin:
+  regex: 'Paladin TV'
+  device: 'tv'
+  model: 'TV Box'
+
 # iVooMi
 iVooMi:
   regex: '(?:Innelo_1|iV 505|Me 1\+)(?:[);/ ]|$)'
