--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10834,3 +10834,21 @@
     model: M6 (2021)
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Miracle XS Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.186 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 74.0.3729.186
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: CellAllure
+    model: Miracle XS
+  os_family: Android
+  browser_family: Chrome
