Adds detection for M-Tech TEZ 4G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24989,13 +24989,15 @@ KINGZONE:
 
 # MTech
 M-Tech:
-  regex: '(?:EROS 4G|MTECH ACE9)(?:[);/ ]|$)'
+  regex: '(?:EROS 4G|MTECH ACE9|Mtech TEZ 4G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'EROS 4G'
       model: 'Eros 4G'
     - regex: 'ACE9'
       model: 'Ace 9'
+    - regex: 'TEZ 4G'
+      model: 'TEZ 4G'
 
 # Fantec Boogy
 Fantec:
