Adds detection for Wolki brand and Wolki W6 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19014,6 +19014,14 @@ Wolfgang:
   device: 'smartphone'
   model: 'AT-AS$1'
 
+# Wolki (https://wolkimobile.com/)
+Wolki:
+  regex: 'WS067(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'WS067'
+      model: 'W6 Pro'
+
 # Wonu
 Wonu:
   regex: 'Wonu ([a-z0-9]+)'
