Adds detection for Hisense U3 (2019)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7211,7 +7211,7 @@ Hasee:
 
 # Hisense ()
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HISENSE; |HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|HNR55[01]T|E270BSA|HWCD100E|HITV300C|M470BS[AE]|EG98|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567][TM]|22[67]T|22[13]E|230E|103E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)|KS907|U601S Pro'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HISENSE; |HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|HNR55[01]T|E270BSA|HWCD100E|HITV300C|M470BS[AE]|EG98|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567][TM]|22[67]T|22[13]E|230E|103E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)|KS(?:907|964)|U601S Pro'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -7302,6 +7302,8 @@ Hisense:
       device: 'tv'
       model: '$1'
 
+    - regex: 'KS964(?: Build|[);])'
+      model: 'U3 (2019)'
     - regex: '(?:HS-)?Hisense (U3) 2021(?: Build|[);])'
       model: 'U3 (2021)'
     - regex: '(?:HS-)?Hisense ([^;/)]+) Pro(?: Build|[);])'
